k8s-homelab/mongo-express/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongodb
spec:
  selector:
    app: mongo-express
  type: ClusterIP #internal
  ports:
  - protocol: TCP
    port: 80 #this is port of the service. So anything pointing to this service should use 80
    targetPort: 8081
